# sokuten

./: .gitignore  Cargo.toml  README.md  build.rs  install.bat  uninstall.bat
assets/: sokuten.manifest  sokuten.rc
docs/: BUILD-JOURNAL.md  UIUX-ARCHITECTURE.md
src/: hotkey.rs  inject.rs  main.rs  phrases.rs  tray.rs  ui.rs
